pkg/front_end/testcases/inference/instantiate_tearoff_of_call.dart.weak.expect
library test /*isLegacy*/;
//
// Problems in library:
//
// pkg/front_end/testcases/inference/instantiate_tearoff_of_call.dart:12:12: Error: A value of type 'T Function<T>(T)' can't be assigned to a variable of type 'int Function(int)'.
//   func = f.call;
//            ^
//
import self as self;
import "dart:core" as core;

static method test(<T extends core::Object* = dynamic>(T*) →* T* f) → void {
  (core::int*) →* core::int* func;
  func = invalid-expression "pkg/front_end/testcases/inference/instantiate_tearoff_of_call.dart:12:12: Error: A value of type 'T Function<T>(T)' can't be assigned to a variable of type 'int Function(int)'.
  func = f.call;
           ^" in f.call as{TypeError,ForLegacy} (core::int*) →* core::int*;
}
static method main() → dynamic {}
